# kilo

./: .clang-format  .gitignore  README.md  build.zig  build.zig.zon  c.zig  editor.cpp  editor.h  kilo.c  kilo.cpp  kilo.h  main.cpp  main.zig  meson.build  platform.h  platform_linux.c  platform_win32.c  to_line_comment.py
.github/workflows/: docusaurus.yml
docs/: docusaurus.config.ts  package-lock.json  sidebars.ts
docs/docs/: index.md  vimlike.md  windows.md
repos/_mod/: platform.h
repos/antirez/: kilo.c
repos/taidanh/: kilo.c  kilo.h
src/: append_buffer.cpp  append_buffer.h  editor.cpp  editor.h  erow.cpp  erow.h  escape_sequence.cpp  escape_sequence.h  find_mode.cpp  find_mode.h  get_termsize.cpp  get_termsize.h  kilo.cpp  kilo.h  main.cpp  main.zig  meson.build  syntax_highlight.cpp  syntax_highlight.h  term_util.cpp  term_util.h  term_util_linux.cpp  term_util_win32.cpp
